[package]
name = "nominatim_rs"
version = "0.1.0"
authors = ["Me"]
edition = "2018"

[[bin]]
name = "import"
path = "src/import.rs"


[[bin]]
name = "count"
path = "src/count.rs"

[[bin]]
name = "ways_1"
path = "src/ways_1.rs"

[[bin]]
name = "set_of_tags"
path = "src/set_of_tags.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osm_pbf_iter = "0.2.0"
# proj = "0.12.2"
# geo = "0.12.2"
# tempfile = "3.1.0"
dashmap = "3.2.2"
# serde = "1.0.104"
# serde_derive = "1.0.104"
# bincode = "1.2.1"
num_cpus = "1.12.0"
lazy_static = "1.4.0"
atomic-counter = "1.0.1"

# tokio = "0.2.0-alpha.6"
# futures = "0.3.1"